syntax = "proto3";

package io.mybank.mybankkotlin.grpc.payment;

service PaymentService{
  rpc createPayment(PaymentRequest) returns (PaymentResponse){
  }
}

message PaymentRequest {
  string accountId = 1;
  float value = 2;
  string paymentDate = 3;
}

message PaymentResponse {
  string accountId = 1;
  float value = 2;
  string paymentDate = 3;
  enum Status {
    NULL = 0;
    APPROVED = 1;
    REPROVED = 2;
  }
  Status status = 4;
}